# kami-pricing-analytics

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  todo.md
.github/workflows/: create-new-release.yml  deploy-docker-image.yml  deploy-docs-code.yml  deploy-unit-test-cov-code.yml  test-code.yml  test-docker.yml  test-integration.yml  test-mysql-integration.yml  test-postgres-integration.yml
bash_scripts/: entrypoint.sh  healthcheck.sh  monitor_container_health.sh  setup_alembic.sh
config/: settings.cfg  storage.cfg
data_collector/base-collector/: index.html
data_collector/collector-factory/: index.html
data_collector/strategies/web_scraping/amazon/: index.html
data_collector/strategies/web_scraping/base-scraper/: index.html
data_collector/strategies/web_scraping/beleza-na-web/: index.html
data_collector/strategies/web_scraping/mercado_libre/: index.html
data_storage/base-storage/: index.html
data_storage/modes/database/relational/db-models/: index.html
data_storage/modes/database/relational/db-settings/: index.html
data_storage/modes/database/relational/db-storage/: index.html
data_storage/modes/database/relational/mssql/: index.html
data_storage/modes/database/relational/mysql/: index.html
data_storage/modes/database/relational/plsql/: index.html
data_storage/modes/database/relational/sqlite/: index.html
docs/: 404.html  index.html  index.md
docs/assets/: Cadastro Kamico_Brae_sem duplicados.xls  Venda HairPro 01-04 à 16-05 (2024).xlsx
docs/data_collector/: base-collector.md  collector-factory.md
docs/data_collector/base-collector/: index.html
docs/data_collector/collector-factory/: index.html
docs/data_collector/strategies/web_scraping/: amazon.md  base-scraper.md  beleza-na-web.md  mercado_libre.md
docs/data_collector/strategies/web_scraping/amazon/: index.html
docs/data_collector/strategies/web_scraping/base-scraper/: index.html
docs/data_collector/strategies/web_scraping/beleza-na-web/: index.html
docs/data_collector/strategies/web_scraping/mercado_libre/: index.html
docs/data_storage/: base-storage.md  storage-factory.md
docs/data_storage/base-storage/: index.html
docs/data_storage/modes/database/relational/: db-models.md  db-settings.md  db-storage.md  mssql.md  mysql.md  (+3 more)
docs/data_storage/storage-factory/: index.html
docs/interface/api/: pricing-research-request.md
docs/interface/api/fastapi/: app.md
docs/interface/api/pricing-research-request/: index.html
docs/schemas/: pricing-research.md
docs/schemas/pricing-research/: index.html
docs/search/: search_index.json
docs/services/: pricing-service.md
docs/services/pricing-service/: index.html
interface/api/fastapi/app/: index.html
interface/api/pricing-research-request/: index.html
kami_pricing_analytics/data_collector/: __init__.py  base_collector.py  collector.py  collector_factory.py  collector_options.py
kami_pricing_analytics/data_collector/strategies/: base_strategy.py
kami_pricing_analytics/data_collector/strategies/web_scraping/: __init__.py  amazon.py  base_scraper.py  beleza_na_web.py  constants.py  mercado_libre.py  scraper.py  utils.py
kami_pricing_analytics/data_storage/: __init__.py  base_storage.py  constants.py  repository.py  settings.py  storage_base.py  storage_factory.py
kami_pricing_analytics/data_storage/modes/: base_mode.py
kami_pricing_analytics/data_storage/modes/sql_storage/: database.py  models.py  postgresql.py  sqlite.py
kami_pricing_analytics/interface/api/: __init__.py  pricing_research_request.py
kami_pricing_analytics/interface/api/fastapi/: __init__.py  app.py
kami_pricing_analytics/schemas/: __init__.py  options.py  pricing_research.py
kami_pricing_analytics/services/: __init__.py  pricing_service.py
migrations/: env.py
migrations/versions/: 22cde968779f_add_marketplace_info_to_research_process.py  33e74cd01142_initial_migration.py  55d959ca5aae_initial_migration.py  ffe44f575623_initial_migration.py
schemas/pricing-research/: index.html
scraper/: app.py  constants.py  scraper.py
services/pricing-service/: index.html
tests/: notebook.ipynb  selenium_crawler.ipynb  test_scraper.py
tests/data_collector/: test_collector.py
tests/data_collector/strategies/web_scraping/: test_amazon.py  test_base_scraper.py  test_beleza_na_web.py  test_mercado_libre.py
tests/interface/: test_api_fastapi.py
tests/interface/api/: test_pricing_research_request.py  test_princig_research_request.py
tests/schemas/: test_pricing_research.py
tests/services/: test_pricing_service.py
(+19 files in other folders)
