[tool.poetry]
name = "scraper"
version = "0.1.2"
description = "API to scrap prices from competitors' products on especific marketplace"
authors = ["Maicon de Menezes <maicondmenezes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
ipython = "^8.14.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
nbformat = "^5.9.0"
pytest-asyncio = "^0.23.5.post1"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint-review = "blue --check --diff . && isort --check --diff ."
lint = "blue . && isort ."
pre_test = "task lint"
test = "pytest -s -x --cov=scraper -vv -rs"
post_test = "coverage html"
